name:                raft-js
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Jacob Stanley
maintainer:          jacob@stanley.io
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable raft-js
  main-is: Main.hs
  hs-source-dirs: src
  default-language: Haskell2010

  build-depends:
      base >= 4.8 && < 4.9
    , bytestring
    , ghcjs-websockets >= 0.3
    , text >= 1.2
